--- a/src/App.css
+++ b/src/App.css
@@ -43,35 +43,35 @@
 
   .timeline-container {
     position: absolute;
-    bottom: -50%;
+    bottom: -60%;
     background-color: #fff;
     z-index: 1;
   }
 
   @media screen and (max-width: 1065px){
     .timeline-container {
-      bottom: -55%;
+      bottom: -70%;
       max-width: 90%;
     }
   }
 
-  @media screen and (max-width: 1030px){
+  /* @media screen and (max-width: 1030px){
     .timeline-container {
-      bottom: -60%;
+      bottom: -70%;
       max-width: 90%;
     }
-  }
+  } */
 
   @media screen and (max-width: 900px){
     .timeline-container {
-      bottom: -68%;
+      bottom: -80%;
       max-width: 90%;
     }
   }
 
   @media screen and (max-width: 768px){
     .timeline-container {
-      bottom: -55%;
+      bottom: -50%;
       max-width: 90%;
     }
   }
@@ -87,6 +87,14 @@
     .timeline-container {
       bottom: -70%;
       max-width: 90%;
+    }
+    .timeline-text-title {
+      font-size: 0.7rem !important;
+      padding: 0.2rem;
+    }
+    .timeline-text-body {
+      font-size: 0.6rem !important;
+      padding: 0.2rem;
     }
   }
 
